--- a/sample-config.yaml
+++ b/sample-config.yaml
@@ -3,11 +3,14 @@ meta:
   version: 0.1.0
   name: my-es-sink-connector-test-connector
   type: es-sink-connector-sink
-  topic: testing
+  topic: test-index
+  secrets:
+    - name: PASSWORD
+    - name: USERNAME      
 custom:
   url: http://127.0.0.1:9200
   index: test-index
-  username: elastic
-  password: changeme
+  username: "${{ secrets.USERNAME }}"
+  password: "${{ secrets.PASSWORD }}"
 
 
